--- a/mingw-w64-mysql-client/PKGBUILD
+++ b/mingw-w64-mysql-client/PKGBUILD
@@ -14,7 +14,7 @@ options=('!strip')
 makedepends=("base-devel"
              "git"
              "libfido2-devel"
-             ${MINGW_PACKAGE_PREFIX}-autotools
+             "${MINGW_PACKAGE_PREFIX}-make"
              "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
