python-twisted: update to 24.11.0

--- a/mingw-w64-python-twisted/PKGBUILD
+++ b/mingw-w64-python-twisted/PKGBUILD
@@ -1,11 +1,10 @@
 # Contributor: Raed Rizqie <raed.rizqie@gmail.com>
 
-_pyname=Twisted
 _realname=twisted
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=24.3.0
-pkgrel=3
+pkgver=24.11.0
+pkgrel=1
 pkgdesc='An asynchronous networking framework written in Python (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -35,8 +34,8 @@ makedepends=(${MINGW_PACKAGE_PREFIX}-python-build
              ${MINGW_PACKAGE_PREFIX}-python-hatchling
              ${MINGW_PACKAGE_PREFIX}-python-hatch-fancy-pypi-readme)
 options=(!strip)
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('6b38b6ece7296b5e122c9eb17da2eeab3d98a198f50ca9efd00fb03e5b4fd4ae')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('695d0556d5ec579dcc464d2856b634880ed1319f45b10d19043f2b57eb0115b5')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
