--- a/mingw-w64-mysql-client/PKGBUILD
+++ b/mingw-w64-mysql-client/PKGBUILD
@@ -14,11 +14,11 @@ options=('!strip')
 makedepends=("base-devel"
              "git"
              "libfido2-devel"
-             "${MINGW_PACKAGE_PREFIX}-make"
              "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-make"
+             "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 depends=("libfido2"
          "${MINGW_PACKAGE_PREFIX}-libevent"
@@ -26,13 +26,16 @@ depends=("libfido2"
          "${MINGW_PACKAGE_PREFIX}-zstd"
          "${MINGW_PACKAGE_PREFIX}-openssl")
 source=("https://github.com/mysql/mysql-server/archive/refs/tags/mysql-${pkgver}.tar.gz"
-        "0001-Fixed-build-issue-on-MSYS2.patch")
+        "0001-Fixed-build-issue-on-MSYS2.patch"
+        "0002-Fixed-build-issue-on-MSYS2-2.patch")
 sha256sums=('2bf56cad7ada7a758620e63e70d6445e5c9d93f910e7594959ea436a9b25a1be'
-            '7429cb2f1798c9a2396f9842902f65aa19a99d27b37148a6083a3d1682ac5473')
+            '7429cb2f1798c9a2396f9842902f65aa19a99d27b37148a6083a3d1682ac5473'
+            '398b1cd6166f4f07a905e16e27438bd3082da8b06e4f91f2fef296f429df5a65')
             
 prepare() {
   cd ${srcdir}/mysql-server-mysql-${pkgver}
   patch -p1 -i ${srcdir}/0001-Fixed-build-issue-on-MSYS2.patch
+  patch -p1 -i ${srcdir}/0002-Fixed-build-issue-on-MSYS2-2.patch
 }
 
 build() {
@@ -57,6 +60,7 @@ build() {
     -DINSTALL_INFODIR=share/info \
     -DINSTALL_MANDIR=share/man \
     -DCMAKE_PREFIX_PATH=${MINGW_PREFIX} \
+    -DWITH_SSL_PATH=${MINGW_PREFIX} \
     -DWITHOUT_SERVER=ON \
     -DCMAKE_CXX_STANDARD=20 \
     -DDEFAULT_CHARSET=utf8mb4 \
