--- a/mingw-w64-mysql-client/PKGBUILD
+++ b/mingw-w64-mysql-client/PKGBUILD
@@ -17,6 +17,7 @@ makedepends=("base-devel"
              "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-cyrus-sasl"
              "${MINGW_PACKAGE_PREFIX}-make"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-ninja")
