sccache: update to 0.9.1

--- a/mingw-w64-sccache/PKGBUILD
+++ b/mingw-w64-sccache/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=sccache
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.9.0
+pkgver=0.9.1
 pkgrel=1
 pkgdesc='Shared compilation cache (mingw-w64)'
 arch=('any')
@@ -22,7 +22,7 @@ options=('!strip')
 source=("https://github.com/mozilla/sccache/archive/v$pkgver/${_realname}-${pkgver}.tar.gz"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.10+zstd.1.5.6/download"
         "link-zstd-dynamically.patch")
-sha256sums=('df5b8a38f6d29f438dba0be57ec2e6c4c87675c7b9bb4dd2e93d4c9375ca797b'
+sha256sums=('150967a59f148f780acc167c9e35961a196953bd804d513ab013344d73deb436'
             'c253a4914af5bafc8fa8c86ee400827e83cf6ec01195ec1f1ed8441bf00d65aa'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
@@ -43,7 +43,7 @@ prepare() {
 zstd-sys = { path = "../zstd-sys-2.0.10+zstd.1.5.6" }
 END
 
-  cargo update -p zstd-sys -p cc
+  cargo update -p zstd-sys
   cargo fetch --locked
 }
 
