remove gstreamer packages from mingw32.

--- a/mingw-w64-gst-libav/PKGBUILD
+++ b/mingw-w64-gst-libav/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc="Multimedia graph framework - libav plugin (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gstreamer.freedesktop.org/"
-license=("LGPL")
+license=("spdx:LGPL-2.1-or-later")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-ninja"
@@ -42,13 +42,13 @@ build() {
     -Ddoc=disabled \
     ../${_realname}-${pkgver}
 
-  ${MINGW_PREFIX}/bin/ninja.exe
+  ${MINGW_PREFIX}/bin/meson.exe compile
 }
 
 package() {
   cd "${srcdir}/build-${MSYSTEM}"
 
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja.exe install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson.exe install
 
   rm -f ${pkgdir}${MINGW_PREFIX}/lib/gstreamer*/*.a
 }
