--- a/mingw-w64-gst-plugins-bad/PKGBUILD
+++ b/mingw-w64-gst-plugins-bad/PKGBUILD
@@ -6,12 +6,12 @@ _realname=gst-plugins-bad
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-gst-plugins-bad-libs"
          "${MINGW_PACKAGE_PREFIX}-gst-plugins-bad"
-         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-gst-plugin-opencv"))
+         "${MINGW_PACKAGE_PREFIX}-gst-plugin-opencv")
 pkgver=1.24.11
 pkgrel=1
 pkgdesc="GStreamer Multimedia Framework Bad Plugins (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gstreamer.freedesktop.org/"
 msys2_references=(
   "cpe: cpe:/a:freedesktop:gst-plugins-bad"
@@ -50,7 +50,7 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-libexif"
   "${MINGW_PACKAGE_PREFIX}-libgme"
   "${MINGW_PACKAGE_PREFIX}-libjpeg"
-  $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-liblc3")
+  "${MINGW_PACKAGE_PREFIX}-liblc3"
   "${MINGW_PACKAGE_PREFIX}-libmodplug"
   "${MINGW_PACKAGE_PREFIX}-libmpeg2"
   "${MINGW_PACKAGE_PREFIX}-libnice"
@@ -64,7 +64,7 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-libmpcdec"
   "${MINGW_PACKAGE_PREFIX}-nettle"
   "${MINGW_PACKAGE_PREFIX}-openal"
-  $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-opencv")
+  "${MINGW_PACKAGE_PREFIX}-opencv"
   "${MINGW_PACKAGE_PREFIX}-openexr"
   "${MINGW_PACKAGE_PREFIX}-openh264"
   "${MINGW_PACKAGE_PREFIX}-openjpeg2"
@@ -76,9 +76,9 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-soundtouch"
   "${MINGW_PACKAGE_PREFIX}-spandsp"
   "${MINGW_PACKAGE_PREFIX}-srt"
-  $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-svt-av1")
+  "${MINGW_PACKAGE_PREFIX}-svt-av1"
   "${MINGW_PACKAGE_PREFIX}-vo-amrwbenc"
-  $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-webrtc-audio-processing-1")
+  "${MINGW_PACKAGE_PREFIX}-webrtc-audio-processing-1"
   "${MINGW_PACKAGE_PREFIX}-x265"
   "${MINGW_PACKAGE_PREFIX}-zbar"
 )
@@ -189,11 +189,11 @@ build() {
     -Dd3d11-wgc=disabled \
     -Dd3d12=disabled \
     -Duvcgadget=disabled \
-    -Dlc3=$([[ ${CARCH} != i686 ]] && echo "enabled" || echo "disabled") \
+    -Dlc3=enabled \
     -Dqt6d3d11=disabled \
-    -Dsvtav1=$([[ ${CARCH} != i686 ]] && echo "enabled" || echo "disabled") \
-    -Dopencv=$([[ ${CARCH} != i686 ]] && echo "enabled" || echo "disabled") \
-    -Dwebrtcdsp=$([[ ${CARCH} != i686 ]] && echo "enabled" || echo "disabled") \
+    -Dsvtav1=enabled \
+    -Dopencv=enabled \
+    -Dwebrtcdsp=enabled \
     ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/meson compile
@@ -210,7 +210,6 @@ package_gst-plugins-bad-libs() {
 
   rm -f ${pkgdir}${MINGW_PREFIX}/lib/gstreamer*/*.a
 
-  if [[ ${CARCH} != i686 ]]; then
   # for gst-plugin-opencv
   mkdir -p plugin-opencv/bin/
   mkdir -p plugin-opencv/include/gstreamer-1.0/gst/
@@ -219,7 +218,6 @@ package_gst-plugins-bad-libs() {
   mv "${pkgdir}${MINGW_PREFIX}/include/gstreamer-1.0/gst/opencv" plugin-opencv/include/gstreamer-1.0/gst/
   mv "${pkgdir}${MINGW_PREFIX}/lib/libgstopencv-1.0.dll.a" plugin-opencv/lib/
   mv "${pkgdir}${MINGW_PREFIX}/lib/gstreamer-1.0/libgstopencv.dll" plugin-opencv/lib/gstreamer-1.0/
-  fi
 
   # things moved to the plugins package later
   mkdir -p _plugins/lib
@@ -248,7 +246,7 @@ package_gst-plugins-bad() {
     "${MINGW_PACKAGE_PREFIX}-libexif"
     "${MINGW_PACKAGE_PREFIX}-libgme"
     "${MINGW_PACKAGE_PREFIX}-libjpeg"
-    $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-liblc3")
+    "${MINGW_PACKAGE_PREFIX}-liblc3"
     "${MINGW_PACKAGE_PREFIX}-libmodplug"
     "${MINGW_PACKAGE_PREFIX}-libmpeg2"
     "${MINGW_PACKAGE_PREFIX}-libnice"
@@ -273,9 +271,9 @@ package_gst-plugins-bad() {
     "${MINGW_PACKAGE_PREFIX}-soundtouch"
     "${MINGW_PACKAGE_PREFIX}-spandsp"
     "${MINGW_PACKAGE_PREFIX}-srt"
-    $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-svt-av1")
+    "${MINGW_PACKAGE_PREFIX}-svt-av1"
     "${MINGW_PACKAGE_PREFIX}-vo-amrwbenc"
-    $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-webrtc-audio-processing-1")
+    "${MINGW_PACKAGE_PREFIX}-webrtc-audio-processing-1"
     "${MINGW_PACKAGE_PREFIX}-x265"
     "${MINGW_PACKAGE_PREFIX}-zbar"
   )
