--- a/mingw-w64-gst-plugins-good/PKGBUILD
+++ b/mingw-w64-gst-plugins-good/PKGBUILD
@@ -10,7 +10,7 @@ pkgdesc="GStreamer Multimedia Framework Base Plugins (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gstreamer.freedesktop.org/"
-license=("LGPL")
+license=("spdx:LGPL-2.1-or-later")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
@@ -73,13 +73,13 @@ build() {
     -Dsoup-version=3 \
     ../${_realname}-${pkgver}
 
-  ${MINGW_PREFIX}/bin/ninja.exe
+  ${MINGW_PREFIX}/bin/meson.exe compile
 }
 
 package_gst-plugins-good() {
   cd "${srcdir}/build-${MSYSTEM}"
 
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja.exe install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson.exe install
 
   rm -f ${pkgdir}${MINGW_PREFIX}/lib/gstreamer*/*.a
 
