--- a/mingw-w64-gst-plugins-ugly/PKGBUILD
+++ b/mingw-w64-gst-plugins-ugly/PKGBUILD
@@ -13,7 +13,7 @@ msys2_references=(
   "cpe: cpe:2.3:a:gstreamer:gstreamer"
   "cpe: cpe:2.3:a:gstreamer_project:gstreamer"
 )
-license=("LGPL")
+license=("spdx:LGPL-2.1-or-later")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
