--- a/mingw-w64-libnice/PKGBUILD
+++ b/mingw-w64-libnice/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.1.22
 pkgrel=1
 pkgdesc="An implementation of the IETF's draft ICE (for p2p UDP data streams) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libnice.freedesktop.org/"
 msys2_repository_url="https://gitlab.freedesktop.org/libnice/libnice"
 license=("spdx:LGPL-2.1-only OR MPL-1.1")
@@ -26,12 +26,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-gstreamer: nice GStreamer plugin")
 source=("https://nice.freedesktop.org/releases/${_realname}-${pkgver}.tar.gz")
 sha256sums=('a5f724cf09eae50c41a7517141d89da4a61ec9eaca32da4a0073faed5417ad7e')
 
-prepare() {
-  cd ${_realname}-${pkgver}
-}
-
 build() {
-  [[ -d "${srcdir}/build-${MSYSTEM}" ]] && rm -rf "${srcdir}/build-${MSYSTEM}"
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
@@ -55,7 +50,10 @@ package() {
   cd "${srcdir}/build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/meson.exe install --destdir="${pkgdir}"
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING"      "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.LGPL" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.LGPL"
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.MPL"  "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.MPL"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.LGPL" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.LGPL"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.MPL" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.MPL"
 }
