--- a/mingw-w64-cogl/PKGBUILD
+++ b/mingw-w64-cogl/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.22.8
 pkgrel=3
 pkgdesc="An object oriented GL/GLES Abstraction/Utility Layer (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64')
 url="https://blogs.gnome.org/clutter"
 license=('GPL2')
 depends=("${MINGW_PACKAGE_PREFIX}-pango"
