--- a/mingw-w64-gst-devtools/PKGBUILD
+++ b/mingw-w64-gst-devtools/PKGBUILD
@@ -7,28 +7,22 @@ pkgver=1.24.11
 pkgrel=1
 pkgdesc="Development and debugging tools for GStreamer (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gstreamer.freedesktop.org/"
-license=("LGPL")
-makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
+license=("spdx:LGPL-2.1-or-later")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
-             "${MINGW_PACKAGE_PREFIX}-cc")
+             "${MINGW_PACKAGE_PREFIX}-gobject-introspection")
 depends=("${MINGW_PACKAGE_PREFIX}-gstreamer"
          "${MINGW_PACKAGE_PREFIX}-gst-plugins-base"
          "${MINGW_PACKAGE_PREFIX}-json-glib")
 source=(https://gstreamer.freedesktop.org/src/${_realname}/${_realname}-${pkgver}.tar.xz)
 sha256sums=('73990a939c1ea9d9ca199b8cd135dd3a7120b495004aaa79299257d9cd897834')
 
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-
-}
-
 build() {
-  [[ -d "${srcdir}/build-${MINGW_CHOST}" ]] && rm -rf "${srcdir}/build-${MINGW_CHOST}"
-  mkdir -p "${srcdir}/build-${MINGW_CHOST}" && cd "${srcdir}/build-${MINGW_CHOST}"
+  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
   ${MINGW_PREFIX}/bin/meson.exe setup \
@@ -40,11 +34,11 @@ build() {
     -Ddoc=disabled \
     ../${_realname}-${pkgver}
 
-  ${MINGW_PREFIX}/bin/ninja.exe
+  ${MINGW_PREFIX}/bin/meson.exe compile
 }
 
 package() {
-  cd "${srcdir}/build-${MINGW_CHOST}"
+  cd "${srcdir}/build-${MSYSTEM}"
 
-  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/ninja.exe install
+  DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/meson.exe install
 }
