--- a/mingw-w64-gstreamer/PKGBUILD
+++ b/mingw-w64-gstreamer/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.24.11
 pkgrel=1
 pkgdesc="GStreamer Multimedia Framework (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://gstreamer.freedesktop.org/"
 msys2_references=(
   "cpe: cpe:/a:gstreamer:gstreamer"
