--- a/mingw-w64-volk/PKGBUILD
+++ b/mingw-w64-volk/PKGBUILD
@@ -8,7 +8,7 @@ _cpuver=0.9.0
 pkgrel=5
 pkgdesc="The Vector Optimized Library of Kernels (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/gnuradio/volk'
 msys2_references=(
   'archlinux: libvolk'
