--- a/mingw-w64-openshadinglanguage/PKGBUILD
+++ b/mingw-w64-openshadinglanguage/PKGBUILD
@@ -3,10 +3,8 @@
 _realname=openshadinglanguage
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
-replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
-pkgver=1.13.11.0
-pkgrel=2
+pkgver=1.13.12.0
+pkgrel=1
 pkgdesc="Advanced shading language for production GI renderers (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -35,17 +33,13 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-python: Python module"
 source=(https://github.com/AcademySoftwareFoundation/OpenShadingLanguage/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz
         0001-dont-add-fno-rtti-compile-option.patch
         0002-dont-add-flex-include-dir.patch
-        0003-support-llvm-19.patch::https://github.com/AcademySoftwareFoundation/OpenShadingLanguage/commit/35a4ef87.patch
-        0004-fix-typo.patch::https://github.com/AcademySoftwareFoundation/OpenShadingLanguage/commit/d8c6f9a0.patch
         0010-macros-undef-mingw.patch
         0012-isatty-mingw.patch
         0013-disable-assert-partio.patch
         0015-llvm-linking.patch)
-sha256sums=('e448f983049038bb5a611c4fb902d839296c22d3ef221b38e53a14b40ce187a7'
+sha256sums=('a1d359b236a691a1cc0d4a241de3081ce137a0d54be0d2db43f415802291ea88'
             '36d7d16bcf9dedebd254c24fa2f4f70ef5bdf4cea8beee380931cfe5b8c45d7d'
             'b65a21053f0090a9e85ad026fef31d99f65f59f3c79822f452543db3ca8737b6'
-            '165ac5fb32c9355b4d47f1922a5fdf9a0d06ddf60a1ee3e908eddf240f025ce4'
-            '8c1759c856898d4d4d72391591b341125c61e76074316b82e48379107b5dbd9c'
             '8b42553133e487077363a96520131f84453a81afdd9d198ef6827e0395ff1208'
             'c7c125e6fed4650f9770d92ea24771e5518b344718dde291a6d5d4ad945c6222'
             '5277727f3d03ea88f407c1092c28519f58772e89518487da7c55f1d24c1f3c79'
@@ -65,8 +59,6 @@ prepare() {
   apply_patch_with_msg \
     0001-dont-add-fno-rtti-compile-option.patch \
     0002-dont-add-flex-include-dir.patch \
-    0003-support-llvm-19.patch \
-    0004-fix-typo.patch \
     0010-macros-undef-mingw.patch \
     0012-isatty-mingw.patch \
     0013-disable-assert-partio.patch \
@@ -118,7 +110,8 @@ package() {
   DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install .
 
   mkdir -p "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}
-  install -Dm644 "${srcdir}/OpenShadingLanguage-${pkgver}/LICENSE.md" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.md"
+  install -Dm644 "${srcdir}/OpenShadingLanguage-${pkgver}/LICENSE.md" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.md"
 
   local PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
   for _f in "${pkgdir}${MINGW_PREFIX}"/lib/cmake/OSL/*.cmake; do
