openvdb: update to 12.0.0

--- a/mingw-w64-openvdb/PKGBUILD
+++ b/mingw-w64-openvdb/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=openvdb
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=11.0.0
-pkgrel=2
+pkgver=12.0.0
+pkgrel=1
 pkgdesc="Sparse volume data structure and tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,23 +17,26 @@ license=("spdx:MPL-2.0")
 depends=("${MINGW_PACKAGE_PREFIX}-blosc"
          "${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-imath"
+         "${MINGW_PACKAGE_PREFIX}-jemalloc"
          "${MINGW_PACKAGE_PREFIX}-tbb"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-boost"
-             "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-pybind11")
+             "${MINGW_PACKAGE_PREFIX}-nanobind"
+             "${MINGW_PACKAGE_PREFIX}-python")
 optdepends=("${MINGW_PACKAGE_PREFIX}-boost: Python bindings"
             "${MINGW_PACKAGE_PREFIX}-python: Python bindings")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-cppunit")
 source=(https://github.com/AcademySoftwareFoundation/openvdb/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz
         001-use-pkgconfig.patch
-        002-fix-finding-tbb.patch)
-sha256sums=('6314ff1db057ea90050763e7b7d7ed86d8224fcd42a82cdbb9c515e001b96c74'
-            '107a1e7fa6a8efd0931f36088e19b14732f96df124cad6cf22821533ff745d62'
-            'a276ec47b897c81537294bb2e7374e151c429308c1ab9f52740a448148a6bbcc')
+        002-fix-finding-tbb.patch
+        003-fix-build-with-clang-19.patch::https://github.com/AcademySoftwareFoundation/openvdb/commit/930c3acb.patch)
+sha256sums=('23ceb5b18a851f45af118f718a9dd3001efaee364e3f623c37ffbdad03b8905f'
+            'aa5593df146487bc28f05f9feafbc11e9cded804a5fd780d7261f5aaa89d752e'
+            'a276ec47b897c81537294bb2e7374e151c429308c1ab9f52740a448148a6bbcc'
+            '6014462ecf845a586376be41a155a8eb4b424930df904b67b6e52a2c7ba4b477')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -48,7 +51,8 @@ prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
   apply_patch_with_msg \
     001-use-pkgconfig.patch \
-    002-fix-finding-tbb.patch
+    002-fix-finding-tbb.patch \
+    003-fix-build-with-clang-19.patch
 }
 
 build() {
@@ -60,6 +64,8 @@ build() {
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
+
+  local _pyver=$(python -c "import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')")
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
@@ -73,6 +79,7 @@ build() {
     -DOPENVDB_BUILD_PYTHON_MODULE=ON \
     -DOPENVDB_BUILD_NANOVDB=ON \
     -DPython_EXECUTABLE=${MINGW_PREFIX}/bin/python \
+    -Dnanobind_DIR="${MINGW_PREFIX}/lib/python${_pyver}/site-packages/nanobind/cmake" \
     "${_extra_config[@]}" \
     ../${_realname}-${pkgver}
 
