--- a/mingw-w64-libavro/PKGBUILD
+++ b/mingw-w64-libavro/PKGBUILD
@@ -3,15 +3,15 @@
 _realname=libavro
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.11.3
-pkgrel=3
+pkgver=1.12.0
+pkgrel=1
 pkgdesc="The Apache Avro data serialization system (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://github.com/apache/avro"
 msys2_references=(
   'aur: avro-c'
 )
-url="https://github.com/apache/avro"
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -26,14 +26,17 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-snappy"
          "${MINGW_PACKAGE_PREFIX}-xz"
          "${MINGW_PACKAGE_PREFIX}-zlib")
+options=(!emptydirs)
 source=("https://github.com/apache/avro/archive/release-${pkgver}/${_realname}-${pkgver}.tar.gz"
         "001-libavro-1.10.0-fix-mingw-build.patch"
         "002-libavro-1.10.0-add-threadsafe-option.patch"
-        "003-libavro-fix-pkgconfig-file.patch")
-sha256sums=('da377ac1cf8b91458bf702cbcfb214eecb5c399b267f0ca9c0aade6cabaf126e'
-            '5fe8808455773299305f68e715c8936612e83970cde7f32237f708882460e83f'
+        "003-libavro-fix-pkgconfig-file.patch"
+        "004-Fix-bad-filesystem_path-conversion-type-on-windows.patch::https://github.com/apache/avro/commit/ed85a819.patch")
+sha256sums=('51832f9c2e81fa95addb74be627dac27b4883ec2c8627ec8471d99cfea787555'
+            '8ffe71a02c0aa62d9b4e29eaaccb7374ae7a98fb5b00ec189d4ce350fa25e739'
             '346e37dc9adb52739e672483ee895299da6e00121ae0061beb2df3063234d62b'
-            '0dd04ae3557fc2bee2e738d1285d494f0dc1685707d98aeb28c98fc4036b66e4')
+            'eafde6b9ec2fbd06f926b76d017d0d0971fd136ccee1d5cab2842f53c05ae611'
+            '94ac77939e2b21864cbf1881f05f802da82a0c430590bc9bb34e8cb67f74986b')
 
 _apply_patch_with_msg() {
   for _patch in "$@"
@@ -49,7 +52,8 @@ prepare() {
   _apply_patch_with_msg \
     001-libavro-1.10.0-fix-mingw-build.patch \
     002-libavro-1.10.0-add-threadsafe-option.patch \
-    003-libavro-fix-pkgconfig-file.patch
+    003-libavro-fix-pkgconfig-file.patch \
+    004-Fix-bad-filesystem_path-conversion-type-on-windows.patch
 }
 
 build() {
@@ -91,5 +95,11 @@ package() {
     cd "${srcdir}/build-${MSYSTEM}-${lang}"
     DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
   done
+
   rm "${pkgdir}${MINGW_PREFIX}"/include/avro/{msinttypes,msstdint}.h
+
+  rm -r "${pkgdir}${MINGW_PREFIX}"/include/fmt/
+  rm -r "${pkgdir}${MINGW_PREFIX}"/lib/cmake/fmt/
+  rm "${pkgdir}${MINGW_PREFIX}"/lib/pkgconfig/fmt.pc
+  rm "${pkgdir}${MINGW_PREFIX}"/lib/libfmt.a
 }
