simple-mail: update to 3.1.0

--- a/mingw-w64-simple-mail/PKGBUILD
+++ b/mingw-w64-simple-mail/PKGBUILD
@@ -3,30 +3,38 @@
 _realname=simple-mail
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.3.0
+pkgver=3.1.0
 pkgrel=1
 pkgdesc="An SMTP library written in C++ for Qt (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/cutelyst/simple-mail"
 license=("spdx:LGPL-2.1-or-later")
-depends=("${MINGW_PACKAGE_PREFIX}-qt5-base")
+depends=("${MINGW_PACKAGE_PREFIX}-qt6-base")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=("https://github.com/cutelyst/${_realname}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('2026f2017662508b0f25da72694f1dd13ab3ccf82c0454f7c40f8a6cc450c410')
+sha256sums=('d4a46b5c3f706669ffb3c9e4d2ff5e2bd892eda639f80784d862fa94a2082eb2')
 
 build() {
   mkdir -p ${srcdir}/build-${MSYSTEM} && cd ${srcdir}/build-${MSYSTEM}
+
+  declare -a extra_config
+  if check_option "debug" "n"; then
+    extra_config+=("-DCMAKE_BUILD_TYPE=Release")
+  else
+    extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
-    -DCMAKE_BUILD_TYPE=Release \
+    -DQT_VERSION_MAJOR=6 \
     -DBUILD_DEMOS=OFF \
+    "${extra_config[@]}" \
     ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
