--- a/mingw-w64-podman-compose/PKGBUILD
+++ b/mingw-w64-podman-compose/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=podman-compose
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.0.3
-pkgrel=4
+pkgver=1.3.0
+pkgrel=1
 pkgdesc="Get and set values in your .env file in local and production servers (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,7 +12,7 @@ url='https://github.com/containers/podman-compose'
 msys2_references=(
   'pypi: podman-compose'
 )
-license=(GPL2)
+license=(spdx:GPL-2.0-or-later)
 depends=(
     "${MINGW_PACKAGE_PREFIX}-podman"
     "${MINGW_PACKAGE_PREFIX}-python-dotenv"
@@ -24,17 +24,16 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
 )
 options=("!strip")
-source=("$_realname-$pkgver.tar.gz::$url/archive/v$pkgver.tar.gz")
-sha256sums=('b28e5792a50feee987e7864e0df1b6e8929c923c010e1f65493fe29b4c2aedcf')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('e65a70e8fa26bd195d2017ac5893149b40c0df5a0c20d480a338c4f60218b1fa')
 
 build() {
-  cd "${_realname}-${pkgver}"
-
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${_realname}-${pkgver}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
