python-pyreadline3: update to 3.5.4

--- a/mingw-w64-python-pyreadline3/PKGBUILD
+++ b/mingw-w64-python-pyreadline3/PKGBUILD
@@ -3,9 +3,8 @@
 _realname=pyreadline3
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python-pyreadline")
-pkgver=3.4.1
-pkgrel=6
+pkgver=3.5.4
+pkgrel=1
 pkgdesc="A python implementation of GNU readline (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,9 +16,16 @@ license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools-git-versioning")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('6f3d1f7b8a31ba32b73917cefc1f28cc660562f39aea8646d30bd6eff21f7bae')
+sha256sums=('8d57d53039a1c75adba8e50dd3d992b28143480816187ea5efbd5c78e6c885b7')
+
+prepare() {
+  # Set version for setuptools_scm
+  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
+}
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
