python-pytest-benchmark: update to 5.1.0

--- a/mingw-w64-python-pytest-benchmark/PKGBUILD
+++ b/mingw-w64-python-pytest-benchmark/PKGBUILD
@@ -3,40 +3,35 @@
 _realname=pytest-benchmark
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=4.0.0
-pkgrel=3
+pkgver=5.1.0
+pkgrel=1
 pkgdesc="A py.test fixture for benchmarking code (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/ionelmc/pytest-benchmark'
 msys2_references=(
   'pypi: pytest-benchmark'
 )
-license=('BSD')
+license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-py-cpuinfo"
          "${MINGW_PACKAGE_PREFIX}-python-pytest")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/ionelmc/pytest-benchmark/archive/v${pkgver}.tar.gz")
-sha256sums=('42ae209b04764022a286524f2ed32deb35432f997430b067105896f8a990c5f1')
+source=("https://github.com/ionelmc/pytest-benchmark/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('85418c186ac26a9f3cc15d255cd40bb145f8681d0fca044768dd50fa05c8aafe')
 
 prepare() {
-  rm -rf python-build-${CARCH} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${CARCH}"
-
-  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
+  rm -rf python-build-${MSYSTEM} | true
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python setup.py build
 }
 
 package() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
