cp2k: update to 2025.1

--- a/mingw-w64-cp2k/PKGBUILD
+++ b/mingw-w64-cp2k/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=cp2k
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2024.1
-pkgrel=2
+pkgver=2025.1
+pkgrel=1
 pkgdesc="A quantum chemistry and solid state physics software package (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64')
@@ -25,13 +25,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              #$([[ ${CARCH} != x86_64 ]] || echo "${MINGW_PACKAGE_PREFIX}-libxsmm")
              "${MINGW_PACKAGE_PREFIX}-python")
-source=("https://github.com/cp2k/cp2k/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.bz2")
-sha256sums=('a7abf149a278dfd5283dc592a2c4ae803b37d040df25d62a5e35af5c4557668f')
-noextract=("${_realname}-${pkgver}.tar.bz2")
+source=("https://github.com/cp2k/cp2k/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.bz2"
+        "001-fix-build-on-mingw-w64.patch")
+sha256sums=('65c8ad5488897b0f995919b9fa77f2aba4b61677ba1e3c19bb093d5c08a8ce1d'
+            'd60efc3d43e55aef81480794b698ccbcb40cf4d936859ac64b69436c00dc713d')
 
 prepare() {
-  echo "Extracting ${_realname}-${pkgver}.tar.bz2..."
-  tar -xjf ${_realname}-${pkgver}.tar.bz2 || true
+  cd ${_realname}-${pkgver}
+  patch -p1 -i "${srcdir}"/001-fix-build-on-mingw-w64.patch
 }
 
 build() {
