--- a/mingw-w64-proj/PKGBUILD
+++ b/mingw-w64-proj/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=proj
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=9.4.1
+pkgver=9.5.1
 pkgrel=1
 pkgdesc="Cartographic projection software (PROJ.4) (mingw-w64)"
 arch=(any)
@@ -23,15 +23,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
-source=("https://github.com/OSGeo/PROJ/releases/download/${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "001-use-SOVERSION.patch")
-sha256sums=('ffe20170ee2b952207adf8a195e2141eab12cda181e49fdeb54425d98c7171d7'
-            '8ef338756929a1795e830a98866606f79a2aec8f01142fd7a386a0c9afe32998')
-
-prepare() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-  patch -p1 -i ${srcdir}/001-use-SOVERSION.patch
-}
+source=("https://github.com/OSGeo/PROJ/releases/download/${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('a8395f9696338ffd46b0feb603edbb730fad6746fba77753c77f7f997345e3d3')
 
 build() {
   mkdir "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -49,6 +42,7 @@ build() {
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     -DBUILD_SHARED_LIBS=ON \
     -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
+    -DAPPEND_SOVERSION=ON \
     -DNLOHMANN_JSON_ORIGIN="external" \
     -DBUILD_TESTING=OFF \
     "${_extra_config[@]}" \
@@ -61,5 +55,6 @@ package() {
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/COPYING \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/COPYING
 }
