python-archinfo: update to 9.2.136

--- a/mingw-w64-python-archinfo/PKGBUILD
+++ b/mingw-w64-python-archinfo/PKGBUILD
@@ -1,7 +1,9 @@
+
+
 _pyname=archinfo
 pkgbase=mingw-w64-python-${_pyname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_pyname}")
-pkgver=9.2.135
+pkgver=9.2.136
 pkgrel=1
 pkgdesc="Classes with architecture-specific information useful to other projects (mingw-w64)"
 arch=('any')
@@ -10,14 +12,14 @@ url="https://github.com/angr/archinfo"
 msys2_references=(
   'pypi: archinfo'
 )
-license=('BSD-2-Clause')
+license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
 )
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 optdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-capstone"
   "${MINGW_PACKAGE_PREFIX}-python-unicorn"
@@ -25,7 +27,7 @@ optdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-pyvex"
 )
 source=("${url}/archive/v${pkgver}/${_pyname}-${pkgver}.tar.gz")
-sha512sums=('b8e049f88a74465679ac45f5abe82883906e797fee19387d88dff2ece1a920f3671915f0559c8080164bd3f9afaf1d183f6615dbfd175a42d672822d0437e9bd')
+sha512sums=('387f7d75b1b6f1255c0865148b13e872c75a89fc8cfc18b1e29d9dc23aad7df23cc1b8bb75b2ccb0d3068218428ea1c092931a489c7a34e7e8e600ca69b2b6cb')
 
 
 build() {
