strumpack: update to 8.0.0

--- a/mingw-w64-strumpack/PKGBUILD
+++ b/mingw-w64-strumpack/PKGBUILD
@@ -3,24 +3,26 @@
 _realname=strumpack
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=7.2.0
-pkgrel=2
+pkgver=8.0.0
+pkgrel=1
 pkgdesc='Structured Matrix Package (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://portal.nersc.gov/project/sparse/strumpack/"
+msys2_repository_url="https://github.com/pghysels/STRUMPACK"
 license=('spdx:BSD-3-Clause')
-depends=("${MINGW_PACKAGE_PREFIX}-openblas"
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-metis"
-         "${MINGW_PACKAGE_PREFIX}-scotch"
-         "${MINGW_PACKAGE_PREFIX}-omp")
+         "${MINGW_PACKAGE_PREFIX}-omp"
+         "${MINGW_PACKAGE_PREFIX}-openblas")
+         #"${MINGW_PACKAGE_PREFIX}-scotch") scotch should be built with CMake.
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-fc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("https://github.com/pghysels/STRUMPACK/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         "001-fix-installation-destination.patch")
-sha256sums=('6988c00c3213f13e53d75fb474102358f4fecf07a4b4304b7123d86fdc784639'
+sha256sums=('11cc8645d622a16510b39a20efc64f34862b41976152d17f9fbf3e91f899766c'
             'a534dacf6fd6020a315db9fb306c803ba3fc5ce95e1cb6aff1dedc8c921c12e5')
 
 prepare() {
@@ -44,7 +46,7 @@ build() {
       -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
       "${_extra_config[@]}" \
       -DSTRUMPACK_USE_MPI=OFF \
-      -DTPL_ENABLE_SCOTCH=ON \
+      -DTPL_ENABLE_SCOTCH=OFF \
       -DBUILD_SHARED_LIBS=ON \
       ../${_realname}-${pkgver}
 
@@ -62,5 +64,6 @@ package() {
     sed -e "s|${MINGW_PREFIX}|\$\{_IMPORT_PREFIX\}|g" -i ${_f}
   done
 
-  install -Dm644 ${srcdir}/${_realname}-${pkgver}/LICENSE ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
+  install -Dm644 ${srcdir}/${_realname}-${pkgver}/LICENSE \
+    ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
