python-tomli: update to 2.2.1

--- a/mingw-w64-python-lief/PKGBUILD
+++ b/mingw-w64-python-lief/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="LIEF - Library to Instrument Executable Formats (mingw-w64)"
 pkgver=0.13.2
 pkgrel=4
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'mingw32')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 msys2_references=(
   'pypi: lief'
 )
@@ -37,8 +37,6 @@ prepare() {
 }
 
 build() {
-  cd "${srcdir}/LIEF-${pkgver}"
-  [[ -d build-${MSYSTEM} ]] && rm -rf build-${MSYSTEM}
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX" \
@@ -56,7 +54,7 @@ build() {
     -DCMAKE_CXX_USE_RESPONSE_FILE_FOR_OBJECTS=OFF \
     -DLIEF_ELF=off -DLIEF_MACHO=off -DLIEF_OAT=off -DLIEF_DEX=off -DLIEF_VDEX=off -DLIEF_ART=off \
     ${_conf} \
-    ..
+    ../LIEF-${pkgver}
     #-DBUILD_SHARED_LIBS:BOOL=OFF
     #-DBUILD_STATIC_LIBS:BOOL=OFF
 
@@ -76,7 +74,6 @@ build() {
 }
 
 package() {
-  cd "${srcdir}/LIEF-${pkgver}"
   DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake.exe --install build-${MSYSTEM}
 
   local _PREFIX_WIN=$(cygpath -wm ${MINGW_PREFIX})
@@ -89,9 +86,9 @@ package() {
   _site_packages=${pkgdir}$(cygpath ${_pythonpath})
   _ext_suffix=`${MINGW_PREFIX}/bin/python -c "import sysconfig; print(sysconfig.get_config_var('EXT_SUFFIX'))"`
   mkdir -p $_site_packages
-  cp -r api/python/${_realname}.egg-info $_site_packages/${_realname}-${pkgver}.egg-info
-  cp build-${MSYSTEM}/api/python/lief.pyd $_site_packages/lief$_ext_suffix
+  cp -r "${srcdir}"/LIEF-${pkgver}/api/python/${_realname}.egg-info $_site_packages/${_realname}-${pkgver}.egg-info
+  cp "${srcdir}"/build-${MSYSTEM}/api/python/lief.pyd $_site_packages/lief$_ext_suffix
 
-  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}"/LIEF-${pkgver}/LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
 
