--- a/mingw-w64-python-findpython/PKGBUILD
+++ b/mingw-w64-python-findpython/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.6.2
 pkgrel=2
 pkgdesc='A utility to find python versions on your system (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/frostming/findpython'
 msys2_references=(
   'pypi: findpython'
