--- a/mingw-w64-python-pdm-backend/PKGBUILD
+++ b/mingw-w64-python-pdm-backend/PKGBUILD
@@ -7,12 +7,12 @@ pkgver=2.4.3
 pkgrel=1
 pkgdesc="The build backend used by PDM that supports latest packaging standards (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://backend.pdm-project.org/'
+msys2_repository_url='https://github.com/pdm-project/pdm-backend'
 msys2_references=(
   'pypi: pdm-backend'
 )
-msys2_repository_url='https://github.com/pdm-project/pdm-backend'
-url='https://backend.pdm-project.org/'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-packaging"
