--- a/mingw-w64-python-tomli/PKGBUILD
+++ b/mingw-w64-python-tomli/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=tomli
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.0.1
-pkgrel=10
+pkgver=2.2.1
+pkgrel=1
 pkgdesc="A lil' TOML parser (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/hukkin/tomli'
 msys2_references=(
   'pypi: tomli'
@@ -18,8 +18,8 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-flit-core")
-source=("${_realname}-$pkgver.tar.gz"::"$url/archive/$pkgver.tar.gz")
-sha256sums=('ad22dbc128623e0c156ffaff019f29f456eba8a5d5a05164dd34f63e560449df')
+source=("$url/archive/$pkgver/${_realname}-$pkgver.tar.gz")
+sha256sums=('3af7c4b571d1ccddaba020c558da0ce5b5e24edc830e478a903d82dc2d9013ae')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
