--- a/mingw-w64-python-tomli-w/PKGBUILD
+++ b/mingw-w64-python-tomli-w/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.1.0
 pkgrel=1
 pkgdesc="A lil' TOML writer (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/hukkin/tomli-w'
 msys2_references=(
   'pypi: tomli-w'
